{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 248,
  "lineage": "a90c7618-476b-66e2-1ab0-aad92dae01fa",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000b3a073fc20e415",
            "arn": "arn:aws:ec2:us-east-1:432883629663:instance/i-02d950b4ffb8ed5f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02d950b4ffb8ed5f3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xword",
            "monitoring": false,
            "primary_network_interface_id": "eni-04bff182f748f4b70",
            "private_dns": "ip-10-0-3-40.ec2.internal",
            "private_ip": "10.0.3.40",
            "public_dns": "ec2-54-89-185-234.compute-1.amazonaws.com",
            "public_ip": "54.89.185.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a992de3ad4470adb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038b69d263ab51823",
            "tags": {
              "Name": "xword-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0006391a31c876029"
            ]
          },
          "dependencies": [
            "module.app.aws_security_group.app_sg",
            "module.vpc.aws_subnet.xword-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.bastion.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000b3a073fc20e415",
            "arn": "arn:aws:ec2:us-east-1:432883629663:instance/i-0aa80b0d109f91af0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0aa80b0d109f91af0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xword",
            "monitoring": false,
            "primary_network_interface_id": "eni-00e069e31d86866ed",
            "private_dns": "ip-10-0-2-175.ec2.internal",
            "private_ip": "10.0.2.175",
            "public_dns": "ec2-3-92-61-1.compute-1.amazonaws.com",
            "public_ip": "3.92.61.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0381996b97f0b8a30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050d24621761d3654",
            "tags": {
              "Name": "xword-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0448354c9b80e09e8",
              "sg-0710263d463cbbf9a"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.rds.aws_security_group.db_access_sg",
            "module.vpc.aws_subnet.xword-web-subnet",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.web.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000b3a073fc20e415",
            "arn": "arn:aws:ec2:us-east-1:432883629663:instance/i-00c1fbe901e3a25fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00c1fbe901e3a25fb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xword",
            "monitoring": false,
            "primary_network_interface_id": "eni-065cdfe87f72a745f",
            "private_dns": "ip-10-0-2-182.ec2.internal",
            "private_ip": "10.0.2.182",
            "public_dns": "ec2-54-161-73-208.compute-1.amazonaws.com",
            "public_ip": "54.161.73.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05019e3abebb6a586",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050d24621761d3654",
            "tags": {
              "Name": "xword-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009049699eb751920",
              "sg-03d7314a5a500d47d"
            ]
          },
          "dependencies": [
            "module.app.aws_security_group.app_access_sg",
            "module.vpc.aws_security_group.xword-vpc-security-group",
            "module.vpc.aws_subnet.xword-web-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xword-vpc-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-090ca787e3fec42e0",
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-vpc-internet-gateway"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "xword-vpc-network-acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06dc5a04c30b5d111",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "432883629663",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-038b69d263ab51823",
              "subnet-0ca5aea5517b98481",
              "subnet-0fc165940e2770218"
            ],
            "tags": {
              "Name": "xword-vpc-network-acl"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_subnet.xword-app-subnet",
            "module.vpc.aws_subnet.xword-data-subnet1",
            "module.vpc.aws_subnet.xword-data-subnet2",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xword-vpc-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09bd1ffb281e09d04",
            "owner_id": "432883629663",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090ca787e3fec42e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xword-vpc-route-table"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cea2207cf5fb5268",
            "route_table_id": "rtb-09bd1ffb281e09d04",
            "subnet_id": "subnet-0fc165940e2770218"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-data-subnet1",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0358701aa2a774653",
            "route_table_id": "rtb-09bd1ffb281e09d04",
            "subnet_id": "subnet-0ca5aea5517b98481"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-data-subnet2",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b44cdb823ea8ac69",
            "route_table_id": "rtb-09bd1ffb281e09d04",
            "subnet_id": "subnet-038b69d263ab51823"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-app-subnet",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b44cdb823ea8ac69",
            "route_table_id": "rtb-09bd1ffb281e09d04",
            "subnet_id": "subnet-038b69d263ab51823"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-app-subnet",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_access_sg",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-009049699eb751920",
            "description": "Allow access to app subnet",
            "egress": [],
            "id": "sg-009049699eb751920",
            "ingress": [],
            "name": "production-app-access-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-app-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-0006391a31c876029",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0006391a31c876029",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009049699eb751920"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "production-app-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.app.aws_security_group.app_access_sg",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.bastion.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-0710263d463cbbf9a",
            "description": "Allow access to bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0710263d463cbbf9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.39.106.77/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "production-bastion-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-0448354c9b80e09e8",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-0448354c9b80e09e8",
            "ingress": [],
            "name": "production-db-access-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-01a1268e50afbab0f",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a1268e50afbab0f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0448354c9b80e09e8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "production-rds-sg",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.rds.aws_security_group.db_access_sg",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xword-vpc-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-03d7314a5a500d47d",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d7314a5a500d47d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "xword-vpc-security-group",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-app-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-038b69d263ab51823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-038b69d263ab51823",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-app-subnet"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-data-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-0fc165940e2770218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fc165940e2770218",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-data-subnet-1"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-data-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-0ca5aea5517b98481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ca5aea5517b98481",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-data-subnet-1"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-web-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-050d24621761d3654",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-050d24621761d3654",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-web-subnet"
            },
            "vpc_id": "vpc-0d6560802c84ce748"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xword-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:vpc/vpc-0d6560802c84ce748",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db66ffd4cb98639e",
            "default_route_table_id": "rtb-0af47a3d84778ae8f",
            "default_security_group_id": "sg-07adcb0a3dcc59302",
            "dhcp_options_id": "dopt-fabebc9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6560802c84ce748",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af47a3d84778ae8f",
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-vpc"
            }
          }
        }
      ]
    }
  ]
}